Fix search menu overflow

--- a/indico/modules/search/client/js/components/SearchApp.module.scss
+++ b/indico/modules/search/client/js/components/SearchApp.module.scss
@@ -6,7 +6,7 @@
 // LICENSE file for more details.
 
 .menu {
-  overflow-x: scroll;
+  flex-wrap: wrap;
   padding-bottom: 2px;
 }
 
